--- a/DutchTreat/wwwroot/Index.html
+++ b/DutchTreat/wwwroot/Index.html
@@ -10,7 +10,7 @@
         <img src="img/fa1.jpg"/>
     </div>
     <h3>Mug</h3>
-    <ul>
+    <ul calss="product-props">
         <li>Price: $9.99</li>
         <li>Artist: Van Gogh</li>
         <li>Title: </li>
@@ -18,24 +18,26 @@
     </ul>
     <button>Buy</button>
 
-    <form>
-        <label>Your Name:</label>
-        <br />
-        <input/>
-        <br />
-        <label>Email:</label>
-        <br />
-        <input type="email"/>
-        <br />
-        <label>Subject:</label>
-        <br />
-        <input type="text"/>
-        <br/>
-        <label>Message:</label>
-        <br />
-        <textarea rows="4"></textarea>
-        <br />
-        <input type="submit" value="Send Message"/>
-    </form>
+    <div id="theDiv">
+        <form>
+            <label>Your Name:</label>
+            <br />
+            <input />
+            <br />
+            <label>Email:</label>
+            <br />
+            <input type="email" />
+            <br />
+            <label>Subject:</label>
+            <br />
+            <input type="text" />
+            <br />
+            <label>Message:</label>
+            <br />
+            <textarea rows="4"></textarea>
+            <br />
+            <input type="submit" value="Send Message" />
+        </form>
+    </div>
 </body>
 </html>
