--- a/DutchTreat/wwwroot/Index.html
+++ b/DutchTreat/wwwroot/Index.html
@@ -40,6 +40,29 @@
             <input type="submit" value="Send Message" />
         </form>
     </div>
+
+    <div>
+        <div id="loginToggle">Login</div>
+        <form class="popup-form">
+            <div>
+                <label>Username</label>
+                <input/>
+            </div>
+            <div>
+                <label>Password</label>
+                <input type="password"/>
+            </div>
+            <div>
+                <input type="checkbox"/>
+                <label>Remember me?</label>
+            </div>
+            <div>
+                <input type="submit" value="Login"/>
+            </div>
+        </form>
+    </div>
+
+    <script src="lib/jQuery/dist/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
